--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,7 +1,3 @@
-html {
-    font-size: 14px;
-}
-
 @media (min-width: 768px) {
     html {
         font-size: 16px;
@@ -15,11 +11,23 @@ html {
 html {
     position: relative;
     min-height: 100%;
+    font-size: 14px;
 }
 
 body {
-    margin-bottom: 60px;
     /*    font-family: 'Inter', sans-serif;*/
     font-family: 'Space Grotesk', sans-serif;
     /*    font-family: 'Roboto', sans-serif;*/
+    display: flex;
+    flex-direction: column;
+    margin-top: 2rem;
+    padding-top: 3rem;
+}
+
+main {
+    flex: 1;
+}
+
+.footer a:hover {
+    text-decoration: underline;
 }
