--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
 	var isAuthenticated = User.Identity.IsAuthenticated;
 }
+@using System.Security.Claims
+@{
+	var userId = User.FindFirstValue(ClaimTypes.NameIdentifier);
+}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -47,6 +51,11 @@
 								<li class="nav-item">
 									<a class="nav-link" asp-area="" asp-controller="Home" asp-action="Discover">
 										<i class="bi bi-search me-1"></i> Discover
+									</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" asp-controller="Users" asp-action="GetUserBorrowBooks" asp-route-id="@userId">
+										<i class="bi bi-journal-bookmark me-1"></i> Your book
 									</a>
 								</li>
 							</ul>
